Don't use noindentparagraph
I find it rather ugly

--- a/paper.tex
+++ b/paper.tex
@@ -140,7 +140,7 @@
 %\renewcommand{\paragraph}[1]{\textbf{\textit{#1. }}}
 \setlength{\intextsep}{0pt}
 %\AgdaNoSpaceAroundCode{}
-\renewcommand\paragraph{\noindentparagraph}
+%\renewcommand\paragraph{\noindentparagraph}
 
 % This trick is taken from here:
 % https://tex.stackexchange.com/questions/346444/mathpartir-abovedisplayskip-and-belowdisplayskip-affect-placement-of-side-con
