--- a/paper.tex
+++ b/paper.tex
@@ -223,6 +223,39 @@
   Thus we use the power of reflection to bring the benefits of dependent types to languages
   that had to go without them so far.
 \end{abstract}
+
+\begin{CCSXML}
+<ccs2012>
+<concept>
+<concept_id>10011007.10011006.10011041.10011047</concept_id>
+<concept_desc>Software and its engineering~Source code generation</concept_desc>
+<concept_significance>300</concept_significance>
+</concept>
+<concept>
+<concept_id>10011007.10011006.10011041.10011046</concept_id>
+<concept_desc>Software and its engineering~Translator writing systems and compiler generators</concept_desc>
+<concept_significance>300</concept_significance>
+</concept>
+<concept>
+<concept_id>10011007.10010940.10010992.10010998.10010999</concept_id>
+<concept_desc>Software and its engineering~Software verification</concept_desc>
+<concept_significance>300</concept_significance>
+</concept>
+<concept>
+<concept_id>10011007.10011006.10011050.10011017</concept_id>
+<concept_desc>Software and its engineering~Domain specific languages</concept_desc>
+<concept_significance>300</concept_significance>
+</concept>
+</ccs2012>
+\end{CCSXML}
+
+\ccsdesc[300]{Software and its engineering~Source code generation}
+\ccsdesc[300]{Software and its engineering~Translator writing systems and compiler generators}
+\ccsdesc[300]{Software and its engineering~Software verification}
+\ccsdesc[300]{Software and its engineering~Domain specific languages}
+
+\keywords{embedded languages, program extraction, program verification, dependent types, reflection, Agda}
+
 \maketitle
 
 \section{Introduction}\label{sec:introduction}
