--- a/paper.bib
+++ b/paper.bib
@@ -52,15 +52,6 @@ series = {CGO '04}
         note = {Accessed [2021/02/20]}
 }
 
-@misc{agda,
-        author = {{{Agda} development team}},
-        howpublished = {\url{https://agda.readthedocs.io}},
-        title = {Agda v2.6.2 Documentation},
-        year = 2021,
-        note = {Accessed [2021/07/10]}
-}
-
-
 
 @inproceedings{idris-refl,
 author = {Christiansen, David and Brady, Edwin},
@@ -568,6 +559,7 @@ isbn="978-3-642-41582-1"
   author = {{Agda Development Team}},
   year = 2021,
   url = "https://agda.readthedocs.io/en/v2.6.2/",
+  note = {Accessed [2021/07/10]},
 }
 
 @book{Coq-8-13-2,
