--- a/paper.tex
+++ b/paper.tex
@@ -5,6 +5,7 @@
 \copyrightyear{2021}
 \acmYear{2021}
 \setcopyright{rightsretained}
+\acmPrice{}
 \acmConference[GPCE '21]{Proceedings of the 20th ACM SIGPLAN International Conference on Generative Programming: Concepts and Experiences}{October 17--18, 2021}{Chicago, IL, USA}
 \acmBooktitle{Proceedings of the 20th ACM SIGPLAN International Conference on Generative Programming: Concepts and Experiences (GPCE '21), October 17--18, 2021, Chicago, IL, USA}
 \acmDOI{10.1145/3486609.3487201}
@@ -35,7 +36,7 @@
 
 \usepackage{mathpartir}
 
-\usepackage{todonotes}
+%\usepackage{todonotes}
 
 \usepackage{varwidth}
 \usepackage{microtype}
@@ -163,7 +164,7 @@
 \begin{document}
 
 %% Title information
-\title[]{Extracting The Power of Dependent Types}
+\title[]{Extracting the Power of Dependent Types}
 
 
 %% Author with single affiliation.
