--- a/paper.tex
+++ b/paper.tex
@@ -50,7 +50,7 @@
 \usepackage{microtype}
 
 % Fixing overfull lines
-\emergencystretch=10.0pt % default 0.0pt
+\emergencystretch=2pt % default 0.0pt
 \hyphenpenalty=500 % default 50
 \exhyphenpenalty=500 % default 50
 
@@ -616,9 +616,12 @@ a system like Agda could do it in principle.
 We would like to thank reviewers for their constructive suggestions.
 This work is supported by the \grantsponsor{EPSRC}{Engineering and
 Physical Sciences Research Council}{https://epsrc.ukri.org} through
-the grant \grantnum{EPSRC001}{EP/N028201/1}, and the
+the grant
+
+\noindent
+\grantnum{EPSRC001}{EP/N028201/1}, and the
 \grantsponsor{NWO}{Dutch Research Council}{https://www.nwo.nl/en}
-through the grant VI.Veni.202.216.
+through the grant~VI.Veni.202.216.
 \end{acks}
 
 %\pagebreak
