Final adjustments to camera-ready

--- a/paper.tex
+++ b/paper.tex
@@ -164,7 +164,7 @@
 \begin{document}
 
 %% Title information
-\title[]{Extracting the Power of Dependent Types}
+\title{Extracting the Power of Dependent Types}
 
 
 %% Author with single affiliation.
